--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,40 +1,17 @@
-# ============================
-# CONFIGURAÇÕES DO SERVIDOR
-# ============================
+# CONFIGURACOES DO SERVIDOR
 server.port=8080
-server.servlet.context-path=/
 
-# ============================
-# CONFIGURAÇÕES DO BANCO DE DADOS MYSQL
-# ============================
-spring.datasource.url=jdbc:mysql://localhost:3306/ordem_servico_db?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+# BANCO DE DADOS
+spring.datasource.url=jdbc:mysql://localhost:3306/ordem_servico_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ============================
-# CONFIGURAÇÕES JPA/HIBERNATE
-# ============================
-# MUDEI AQUI ?????????????????????????????????????
+# JPA / HIBERNATE
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-# OU simplesmente COMENTE/REMOVA a linha acima
-# spring.jpa.database-platform=
-# ???????????????????????????????????????????????
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-# ============================
-# CONFIGURAÇÕES DE SEGURANÇA
-# ============================
+# SEGURANCA
 spring.security.user.name=admin
 spring.security.user.password=admin
-spring.security.user.roles=ADMIN
-
-# ============================
-# LOGGING
-# ============================
-logging.level.com.assistencia.tecnica=DEBUG
-logging.level.org.springframework.security=INFO
-logging.level.org.hibernate.SQL=DEBUG
